# qtcmakesnippets

./: CMakeLists.txt  LICENSE
src/: main.cpp
